# lapce-plugin-magento2-lsp

./: Cargo.toml  LICENSE  README.md  build.rs  lapce-plugin-magento2-lsp.wasm  volt.toml
src/: main.rs
